--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,36 @@
-h1 {
-    padding: 10%;
+ * {
+  box-sizing:border-box;
+ }
+ html {
+  display: block;
+  line-height: 1.2;
+  min-height: 100%;
+  -webkit-text-size-adjust: 100%;
+ }
+ body {
+  margin:0;
+  padding: 0;
+  font-size: 16px;
+  color: black;
+  min-height: 100%;
+  display:block;
+ }
+
+ div.jumbotron {
+  background:linear-gradient(to left, darkblue, mediumblue); 
+  color: white;
+  text-align: center;
+  box-sizing: border-box;
+  padding: .7rem;
+ }
+ .h1 {
+  display: block;
+  font-size: 16px;
+  font-size: larger;
+  width:fit-content;
+ }  
+ h1 {
+    padding: 0%;
     /* border: 1px solid grey; */
     width:fit-content;
 }
@@ -7,14 +38,252 @@ div.jumbotron {
    margin:auto;
    background-color: navy;
    color: whitesmoke;  
+   display: block;
+  font-size: 16px;
+  font-size: larger;
 }
 .horizontal-gradient {
     background: linear-gradient(to right, blue, darkblue);
 }
 body {
     font-family: Arial;
+    font-size: 16px;
+    color: black;
   }
+div {
+  display: block;
+}
+.row{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-left: 15px;
+  margin-right: 15px;
+}
   
+[class*='col-'] {
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.pb-3 {
+  padding-bottom: 1rem;
+}
+def {
+  display: block;
+}
+#form-heading {
+  margin: .5rem;
+}
+h2 { 
+  font-size: 2rem;
+  display: block;
+  margin-block-start: .8em;
+  margin-block-end: .8em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+}
+form {
+  width: 100%;
+  display: block;
+  margin-top:0em;
+}
+form .form-group {
+  display: block;
+  width: 100%;
+  margin: .7rem 0;
+}
+
+div {
+  display: block;
+}
+form .form-input {
+  width: 100%;
+  padding: .75rem;
+  color: black;
+  background-color: white;
+  font-size: 1.3rem;
+  border: 1px solid black;
+  border-radius: .3rem;
+  display: block;
+}
+.weather-search {
+  margin: .5rem;
+}
+button, input {
+  overflow: visible;
+}
+
+#search-button {
+  margin: .5rem;
+  width: 100%;
+  background-color: #5268e4;
+  color: lightblue;
+}
+#btn {
+  text-align: center;
+  display: inline-block;
+  padding: .5rem 1.2rem;
+  font-size: 1rem;
+  border-radius: .3rem;
+  border: 1px solid transparent;
+  transition: color .2s ease-in-out .2s ease-in-out;
+ 
+}
+.weather-hr {
+  margin-left: .5rem;
+  width: 100%;
+}
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+hr {
+  margin-left: 5rem;
+  width: 100%;
+  box-sizing: content-box;
+  overflow: visible;
+  display: block;
+  unicode-bidi: isolate;
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  border-style: inset;
+  border-width: 1px;
+}
+[class*='col-'] {
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  
+}
+
+  /* ____________________________ */
+  
+/* Card Columns */
+/* .card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 4;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+} */
+
+  /* Search Box */
+
+  /* form .form-label {
+    display: inline-block;
+    margin: 07rem 0 .3rem .3rem;
+  }
+
+  
+form .form-input {
+  width: 100%;
+  padding: 0.75rem;
+  color: #1a1a1a;
+  background-color: #ffffff;
+  margin: 0.625rem 0;
+  font-size: 1.2rem;
+  border: 1px solid #484848;
+  border-radius: 0.3rem;
+}
+
+form .form-input.form-input-squared {
+  border-radius: 0;
+}
+
+form [type='checkbox'],
+form [type='radio'] {
+  display: inline-block;
+}
+
+label form [type='checkbox'],
+label form [type='radio'] {
+  display: inline-block;
+}
+
+.container {
+  width: 85%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container.container-fluid {
+  width: 92%;
+}
+
+
+  aside {
+    box-sizing: border-box;
+  }
+
+  [class*='col-'] {
+    position: relative;
+    width: 100%;
+    padding-right: 15%;
+    padding-left: 15%;
+  }
+
+  div.input {
+    margin: 8px;
+    border: 5px;
+    padding: 12px;
+  }
+
+  div.citySearch {
+    display: inline-flex;
+    column-rule-width: auto;
+    padding:4px 4px;
+    color: black;
+    margin: 1rem;
+    font-size: 1.25rem;
+    border:2px solid #0b7dda;
+    border-radius: 1.5rem;
+    background-color: red;
+  }
+  #cityNameSearch {
+    background-color: purple;
+  } */
+/* __________________________________________ */
+
+/* Basic search box */
+/* body {
+  background-color: #8ebf42;
+} */
+/* 
+form {
+  width: 400px;
+  margin: auto;
+  margin-top: 250px;
+}
+
+
+input {
+  padding: 4px 10px;
+  border: 1px;
+  font-size: 16px;
+  border-radius: 0.5rem;
+}
+
+.search {
+  width: 75%;
+}
+
+.submit {
+  width: 70px;
+  background-color: #1c87c9;
+  color: #ffffff;
+} */
+/* _______________________________________ */
+
+/* 
   * {
     box-sizing: border-box;
   }
@@ -29,8 +298,8 @@ body {
   }
   
   form.city button {
-    float: left;
-    width: 20%;
+    float:left;
+    width: 80%;
     padding: 10px;
     background: #2196F3;
     color: white;
@@ -48,4 +317,7 @@ body {
     content: "";
     clear: both;
     display: table;
-  }
+  } */
+
+  /* __________________________________________ */
+   
